# tars_robot_sim

./: README.md
docs/: TARS.md
tars_control/: CMakeLists.txt
tars_control/launch/: tars_rqt.perspective
tars_control_lib/: README.md  package.xml
tars_control_lib/src/: tars_control_lib.cpp
tars_controller_nn/: CMakeLists.txt  package.xml
tars_controller_nn/include/tars_controller_nn/: neuron.h  tars_controller_nn_frame.h
tars_controller_nn/src/: neuron.cpp  tars_controller_nn.cpp  tars_controller_nn_frame.cpp
tars_controller_samples/: README.md
tars_controller_samples/tars_sample_controller_cpp/: CMakeLists.txt  README.md  package.xml
tars_controller_samples/tars_sample_controller_cpp/src/: tars_sample_controller_cpp.cpp
tars_controller_samples/tars_sample_controller_py/: CMakeLists.txt  README.md  package.xml  setup.py
tars_controller_samples/tars_sample_controller_py/launch/: tars_runner.launch
tars_controller_samples/tars_sample_controller_py/scripts/: tars_sample_controller
tars_core/tars_corecpp/: CMakeLists.txt  README.md  package.xml
tars_core/tars_corecpp/include/tars_corecpp/: tars_corecpp.h
tars_core/tars_corecpp/src/: tars_corecpp.cpp
tars_core/tars_corepy/: CMakeLists.txt  README.md  package.xml  setup.py
tars_core/tars_corepy/src/tars_corepy/: gazebo_helper.py  level_helper.py  ros_helper.py  tars_control.py
tars_core/tars_world/: CMakeLists.txt  package.xml
tars_core/tars_world/launch/: tars_control.launch  tars_rqt.launch  tars_world.launch
tars_core/tars_world/models/construction_cone/: model.sdf
tars_core/tars_world/urdf/: tars.xacro  tars.xml
tars_core/tars_world/worlds/: tars.world
tars_description/: CMakeLists.txt  package.xml
tars_description/launch/: tars.rviz  tars_rviz.launch
tars_description/urdf/: tars.xacro
tars_gazebo/: CMakeLists.txt  package.xml
tars_gazebo/launch/: tars_world.launch
tars_robot/tars_control/: package.xml
tars_robot/tars_control/config/: tars_control.yaml
tars_robot/tars_control/launch/: tars_control.launch  tars_rqt.perspective
tars_robot/tars_control_lib/: CMakeLists.txt  README.md
tars_robot/tars_control_lib/include/tars_control_lib/: tars_control_lib.h
tars_robot/tars_control_lib_py/: CMakeLists.txt  README.md  package.xml  setup.py
tars_robot/tars_control_lib_py/src/tars_control_lib_py/: control.py  gazebo_helper.py  level_helper.py  tars_control.py
tars_robot/tars_description/urdf/: tars.gazebo  tars.xacro  tars.xml
tars_robot/tars_gazebo/launch/: tars_world.launch
tars_sample_controller/: CMakeLists.txt  package.xml
tars_sample_controller/launch/: tars_runner.launch
tars_sample_controller/scripts/: level_helper.py  ros_helper.py  tars_sample_controller.py
tars_sim/: CMakeLists.txt  package.xml  setup.py
tars_sim/scripts/: tars_sim
tars_sim/src/tars_sim/: TarsHeuristicCalculator.py  TarsSimGui.py  TarsSimRobot.py  TarsSimRunner.py  __init__.py  gui.py
