<package>
	<name>tars_control_lib_py</name>
	<maintainer email="dbrody@gmail.com">David Brody</maintainer>
	<description>
		A ROS library for controlling the TARS robot from python.
	</description>
	<version>0.0.0</version>
	<license>BSD</license>

	<!-- Required by Catkin -->
	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>rospy</build_depend>
	<run_depend>rospy</run_depend>

</package>